Instancia anterior a actualizar la página de registro de usuario

--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ RewriteEngine On
 
 RewriteRule ^(index|logIn|signUp|home|libro)$       $1\.php 
 
-<FilesMatch "^(\.env|\.gitignore|\.gitattributes)$">
+<FilesMatch "^(\.env|\.gitignore|\.gitattributes|config\.php)$">
     Order allow,deny
     Deny from all
 </FilesMatch>
